fixed colors, fonts and spacings

--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,7 @@ body {
 }
 
 .card {
-    margin: 6em auto;
+    margin: 7em auto;
     width: 418px;
     background-color: var(--background-card-color);
     border-radius: 16px;
@@ -45,6 +45,7 @@ body {
 
 .card-content h1 {
     font-family: 'Poppins', sans-serif;
+    color: var(--title-color);
     font-size: 24px;
     font-weight: 500;
 }
@@ -52,45 +53,50 @@ body {
 .card-content p {
     font-family: 'Lato', sans-serif;
     font-size: 16px;
-    font-weight: 350;
+    font-weight: 400;
     margin-top: 14px;
     line-height: 21px;
+    color: var(--paragraph-color);
 }
 
 .card hr {
     border: 1px solid var(--background-page-color);
-    margin: 32px 0px 0px 0px;
+    margin-top: 21px;
 }
 
 .card-footer {
     display: grid;
     grid-template-columns: 15% 85%;
-    grid-template-rows: 100%;
+    grid-template-rows: 55% 45%;
     grid-template-areas: 
     "avatar content-title"
     "avatar content-about";
-    padding: 32px;
+    padding: 21px;
 }
 
 .card-footer img {
     grid-area: avatar;
-    width: 40px;
-    height: 40px;
+    width: 45px;
+    height: 45px;
     border-radius: 50%;
+    border: 5px solid var(--background-page-color);
 }
 
 .card-footer h1 {
     grid-area: content-title;
-    font-family: 'Poppins', sans-serif;
-    font-size: 16px;
+    padding-top: 5px;
+    font-family: 'Leto', sans-serif;
+    color: var(--title-color);
+    font-size: 15px;
     text-transform: capitalize;
-    font-weight: 450;
+    font-weight: 700;
 }
 
 .card-footer p {
     grid-area: content-about;
     font-family: 'Lato', sans-serif;
-    font-size: 13px;
+    font-size: 12px;
     text-transform: capitalize;
-    font-weight: 370;
+    font-weight: 550;
+    color: var(--paragraph-color);
 }
